--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/manrope": "^5.0.18",
+    "@fontsource-variable/rubik": "^5.0.20",
     "@fontsource/roboto": "^5.0.8",
     "@fontsource/roboto-condensed": "^5.0.14",
     "@testing-library/jest-dom": "^6.1.6",
