--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "framer-motion": "^10.16.16",
     "gh-pages": "^6.1.1",
     "node-sass": "^9.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
